Update CLAUDE.md: remove outdated shim task queue + tier system, update AOSP numbers to 89K/24 files